Fixed margin issue with movie posters on smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -235,6 +235,7 @@ body {
   margin-left: 5%;
   margin-right: 5%;
   justify-content: center;
+  width: 100%;
 }
 
 /*Container for each individual movie*/
@@ -441,6 +442,7 @@ body {
   .movieHeader {
     font-size: 26px;
   }
+
 }
 
 /*Extra Small*/
@@ -467,6 +469,10 @@ body {
   /*Styling for the movie list*/
   .movieHeader {
     font-size: 25px;
+  }
+
+  .movieContainer {
+    margin-left: 0px;
   }
 }
 
